[package]
name = "shp_processor_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
bumpalo = "=3.14.0"
console_error_panic_hook = "=0.1.7"
delaunator = "=1.0.2"
js-sys = "=0.3.66"
wasm-bindgen = "=0.2.89"
